--- a/config.toml
+++ b/config.toml
@@ -76,3 +76,7 @@ paginate = 5
         identifier = "about"
         name = "About"
         url = "/about"
+
+[caches]
+  [caches.images]
+    dir = ':cacheDir/images'
